--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
   <body>
     <h1>GitHub Actions</h1>
     <p>Example HTML webpage for the KIII course at FINKI.</p>
-    <p>New line without closing tag.
+    <p>New line without closing tag.</p>
   </body>
 </html>
